[gd_scene load_steps=28 format=3 uid="uid://c5fayvlog2kme"]

[ext_resource type="Script" uid="uid://cfa8r4eybko57" path="res://scripts/main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://cyu2rsv1n55qd" path="res://assets/background.png" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://drtr8ylij0q6o" path="res://scenes/slime.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://b0x712vj81eoc" path="res://scenes/dude.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://btxrf64pv4mew" path="res://scenes/physics_dude.tscn" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://dm45n1uhkqoyk" path="res://assets/box.png" id="7_5vw27"]
[ext_resource type="Texture2D" uid="uid://ckrwom8ae20pb" path="res://assets/box_hit.png" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://cyy8ocohsfjby" path="res://scenes/slime2.tscn" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://bdeu0lp1kvxuc" path="res://scenes/fan.tscn" id="8_eb6dy"]
[ext_resource type="PackedScene" uid="uid://nargy6vk4g63" path="res://scenes/rock.tscn" id="9_85g3d"]
[ext_resource type="Script" uid="uid://bthuruayxyi4m" path="res://scripts/rock.gd" id="10_choun"]
[ext_resource type="PackedScene" uid="uid://npdclh8htpft" path="res://scenes/carry_box.tscn" id="11_ya4ey"]
[ext_resource type="PackedScene" uid="uid://fxy4nc7virx" path="res://scenes/button.tscn" id="13_trceg"]
[ext_resource type="PackedScene" uid="uid://dmy8qaiwkjcjt" path="res://scenes/fire_trap.tscn" id="14_a8y0u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(574, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(325, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(21, 585)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vw27"]
size = Vector2(24, 565)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(73.5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c57u"]
size = Vector2(108.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efxa6"]
size = Vector2(70.5, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dg77c"]
size = Vector2(40.25, 37)

[sub_resource type="Animation" id="Animation_kek77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_5vw27")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5vw27"]
resource_name = "hit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 0, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_5vw27"), ExtResource("7_272bh"), ExtResource("7_272bh"), ExtResource("7_5vw27")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 3, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4c57u"]
_data = {
&"RESET": SubResource("Animation_kek77"),
&"hit": SubResource("Animation_5vw27")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycdy4"]
size = Vector2(1182, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w48qg"]
size = Vector2(252.5, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(2.25, 2.53125)
texture = ExtResource("2_1bvp3")

[node name="Slime" parent="." instance=ExtResource("3_lquwl")]
position = Vector2(206, 556)
scale = Vector2(2, 2)

[node name="Dude" parent="." instance=ExtResource("4_1bvp3")]
visible = false
position = Vector2(336, 544)

[node name="PhysicsDude" parent="." instance=ExtResource("5_lquwl")]
z_index = 1
position = Vector2(104, 216)

[node name="Static" type="Node2D" parent="."]

[node name="LeftFloor" type="StaticBody2D" parent="Static"]

[node name="LeftFloor" type="CollisionShape2D" parent="Static/LeftFloor"]
position = Vector2(288, 613.5)
shape = SubResource("RectangleShape2D_lquwl")

[node name="RightFloor" type="StaticBody2D" parent="Static"]
position = Vector2(839, 589)

[node name="RightFloor" type="CollisionShape2D" parent="Static/RightFloor"]
position = Vector2(150.5, 22.5)
shape = SubResource("RectangleShape2D_7mycd")

[node name="LeftWall" type="StaticBody2D" parent="Static"]

[node name="LeftWall" type="CollisionShape2D" parent="Static/LeftWall"]
position = Vector2(0.5, 282.5)
shape = SubResource("RectangleShape2D_272bh")

[node name="RightWall" type="StaticBody2D" parent="Static"]

[node name="RightWall" type="CollisionShape2D" parent="Static/RightWall"]
position = Vector2(1157, 290)
shape = SubResource("RectangleShape2D_5vw27")

[node name="LeftBridge" type="StaticBody2D" parent="Static"]

[node name="LeftBridge" type="CollisionShape2D" parent="Static/LeftBridge"]
position = Vector2(612.25, 579)
shape = SubResource("RectangleShape2D_kek77")
one_way_collision = true

[node name="CenterBridge" type="StaticBody2D" parent="Static"]

[node name="CenterBridge" type="CollisionShape2D" parent="Static/CenterBridge"]
position = Vector2(703.75, 584)
shape = SubResource("RectangleShape2D_4c57u")
one_way_collision = true

[node name="RightBridge" type="StaticBody2D" parent="Static"]

[node name="RightBridge" type="CollisionShape2D" parent="Static/RightBridge"]
position = Vector2(794, 577)
shape = SubResource("RectangleShape2D_efxa6")
one_way_collision = true

[node name="JumpBox" type="StaticBody2D" parent="Static"]
position = Vector2(276, 455)

[node name="JumpBox" type="CollisionShape2D" parent="Static/JumpBox"]
shape = SubResource("RectangleShape2D_dg77c")

[node name="Sprite2D" type="Sprite2D" parent="Static/JumpBox"]
position = Vector2(-1.2397766e-05, -0.9999889)
scale = Vector2(1.9285716, 2.041667)
texture = ExtResource("7_5vw27")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Static/JumpBox"]
libraries = {
&"": SubResource("AnimationLibrary_4c57u")
}
speed_scale = 0.2

[node name="Ceiling" type="StaticBody2D" parent="Static"]

[node name="Ceiling" type="CollisionShape2D" parent="Static/Ceiling"]
position = Vector2(592, 0)
shape = SubResource("RectangleShape2D_ycdy4")

[node name="Water" type="StaticBody2D" parent="Static"]

[node name="Water" type="CollisionShape2D" parent="Static/Water"]
position = Vector2(701.75, 639)
shape = SubResource("RectangleShape2D_w48qg")

[node name="Slime2" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(80, 555)
scale = Vector2(2, 2)

[node name="Rock" parent="." instance=ExtResource("9_85g3d")]
position = Vector2(928.00006, 512)
script = ExtResource("10_choun")

[node name="CarryBox" parent="." instance=ExtResource("11_ya4ey")]
position = Vector2(152, 490)

[node name="Fan" parent="." instance=ExtResource("8_eb6dy")]
position = Vector2(400, 455)

[node name="Button" parent="." instance=ExtResource("13_trceg")]
position = Vector2(344, 536)
node_path = NodePath("../Fan")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -40.0

[node name="FireTrap" parent="." instance=ExtResource("14_a8y0u")]
position = Vector2(1080, 568)
scale = Vector2(2, 2)
